--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,1 +1,22 @@
-top
+<div class="container">
+  <div class="row">
+    <div class="col my-5">
+      <h2><strong>70歳までに3000万の資産を準備するために毎月いくら積み立てれば良いか</strong></h2>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col my-5 text-center">
+      <h1>年齢を入力してくださいfrom</h1>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col my-5 text-center">
+      <h1>結果を見るButton</h1>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col my-5">
+      <p>※将来的に現役の年齢が延び70歳と仮定・2000万問題と言われていますがこの先さらに必要な額が見込まれることを仮定し3000万・インデックスファンド年利5%を想定し減債基金係数を使って計算しています。</p>
+    </div>
+  </div>
+</div>
