--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,5 +1,5 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Log in", new_session_path(resource_name) %><br />
+  既に登録済みの方は<%= link_to "こちら", new_session_path(resource_name) %>からログインしてください<br />
 <% end %>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
