--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,9 +1,69 @@
-<div class="post-body">
-  <%= attachment_image_tag @post, :image, format:'jpg', size: "200x200" %>
-  <p>投稿内容：<%= @post.introduction %></p>
-  <p>ユーザーネーム：<%= @post.user.name %></p>
-  <% if @post.user == current_user %>
-    <%= link_to '', post_path(@post), class: 'fas fa-trash-alt fa-2x', method: :delete, "data-confirm" => "本当に消しますか？" %>
-    <%= link_to '', edit_post_path(@post.id), class: 'fas fa-cog fa-2x' %>
-  <% end %>
+<div class="contaoner">
+  <div class="row my-5">
+    <div class="col-3">
+      <%= link_to 'ホーム', posts_path, class: 'btn btn-primary' %><br>
+      <%= link_to 'プロフィール', user_path(current_user), class: 'btn btn-primary' %><br>
+      <%= link_to '投資先診断', investment_path, class: 'btn btn-primary' %><br>
+      <%= link_to '新規投稿', new_post_path, class: 'btn btn-primary' %>
+    </div>
+    <div class="col-6">
+      <div class="row">
+        <div class="col-2"><%= attachment_image_tag @post.user, :profile_image, :fill, 60, 60, class: "rounded-circle", fallback: "no_image.jpg", size: "50x50" %></div>
+        <div class="col-2"><%= @post.user.name %></div>
+      </div>
+      <div class="row">
+        <div class="col-2"></div>
+        <div class="col-10"><%= attachment_image_tag @post, :image, format:'jpg', size: "550x400"%></div>
+      </div>
+      <div class="row">
+        <div class="col-2"></div>
+        <div class="col-10 my-4"><%= @post.introduction %></div>
+      </div>
+      <div class="row">
+        <div class="col-3 text-right">コメント</div>
+        <div class="col-3 text-right">
+          <% if @post.liked_by?(current_user) %>
+          <p>
+            <%= link_to post_likes_path(@post), method: :delete do %>
+              ❤<%= @post.likes.count %>
+            <% end %>
+            いいね
+          </p>
+          <% else %>
+          <p>
+            <%= link_to post_likes_path(@post), method: :post do %>
+              ♡<%= @post.likes.count %>
+            <% end %>
+            いいね
+          </p>
+          <% end %>
+        </div>
+        <% if @post.user == current_user %>
+        <div class="col-3 text-right"><%= link_to '', post_path(@post), class: 'fas fa-trash-alt fa-2x', method: :delete, "data-confirm" => "本当に消しますか？" %></div>
+        <div class="col-3 text-right"><%= link_to '', edit_post_path(@post.id), class: 'fas fa-cog fa-2x' %></div>
+        <% end %>
+      </div>
+      <hr>
+      <% @post.post_comments.each do |post_comment| %>
+      <div class="row my-4">
+        <div class="col-2"><%= attachment_image_tag post_comment.user, :profile_image, :fill, 60, 60, class: "rounded-circle", fallback: "no_image.jpg", size: "50x50" %></div>
+        <div class="col-8">
+          <div class="row"><%= post_comment.user.name %></div>
+          <div class="row"><%= post_comment.comment %></div>
+        </div>
+        <div class="col-2"><%= link_to '', post_post_comment_path(post_comment.post, post_comment), class: 'fas fa-trash-alt fa-2x', method: :delete, "data-confirm" => "本当に消しますか？" %></div>
+      </div>
+      <% end %>
+      <div class="row">
+        <%= form_with(model:[@post, @post_comment], local: true) do |f| %>
+        <div class="col">
+          <%= f.text_area :comment, size: "30x5", placeholder: "コメントをここに" %>
+          <%= f.submit "送信", class: 'btn btn-primary' %>
+        </div>
+        <% end %>
+      </div>
+    </div>
+    <div class="col-3">
+    </div>
+  </div>
 </div>
