--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -50,8 +50,8 @@
         <div class="col test-center mt-4">
           <%= form_with url:search_path, method: :get, local: true do |f| %>
             <%= f.text_field 'search[value]' %>
-            <%= f.select 'search[model]', options_for_select({ "User" => "user", "Post" => "post" }) %>
-            <%= f.select 'search[how]', options_for_select({ "キーワード" => "partical" }) %>
+            <%= f.select 'search[model]', options_for_select({ "Post" => "post", "User" => "user" }) %>
+            <%= f.select 'search[how]', options_for_select({ "キーワード" => "partical", "完全一致" => "match" }) %>
             <%= f.submit :'検索' %>
           <% end %>
         </div>
