--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,6 @@
 <div class="contaoner">
   <div class="row my-5">
+    <!--サイドバー一覧-->
     <div class="col-3">
       <%= link_to 'ホーム', posts_path, class: 'btn btn-primary' %><br>
       <%= link_to 'プロフィール', user_path(current_user), class: 'btn btn-primary' %><br>
@@ -37,12 +38,10 @@
       </div>
       <div class="row">
         <ul class="user-tabs">
-          <li>投稿</li>
-          <li>いいね</li>
+          <li class="active"><%= link_to "投稿", user_path(@user.id) %></li>
+          <li><%= link_to "いいね", user_likes_path(@user.id) %></li>
         </ul>
       </div>
-
-
       <!--ログインユーザーが投稿した一覧-->
       <% @posts.each do |post| %>
       <div class="row">
@@ -80,6 +79,17 @@
       <hr>
       <% end %>
     </div>
+    <!--検索機能-->
     <div class="col-3">
+      <div class="row">
+        <div class="col test-center mt-4">
+          <%= form_with url:search_path, method: :get, local: true do |f| %>
+            <%= f.text_field 'search[value]' %>
+            <%= f.select 'search[model]', options_for_select({ "Post" => "post", "User" => "user" }) %>
+            <%= f.select 'search[how]', options_for_select({ "キーワード" => "partical", "完全一致" => "match" }) %>
+            <%= f.submit :'検索' %>
+          <% end %>
+        </div>
+      </div>
     </div>
   </div>
