--- a/app/views/users/likes.html.erb
+++ b/app/views/users/likes.html.erb
@@ -63,15 +63,11 @@
         <div class="col-3">
           <% if post.liked_by?(current_user) %>
           <p>
-            <%= link_to post_likes_path(post), method: :delete do %>
-              ❤ <%= post.likes.count %>
-            <% end %>
+            <%= link_to post.likes.count, post_likes_path(post), method: :delete, remote: true, class: "fas fa-heart" %>
           </p>
           <% else %>
           <p>
-            <%= link_to post_likes_path(post), method: :post do %>
-              ♡ <%= post.likes.count %>
-            <% end %>
+            <%= link_to post.likes.count, post_likes_path(post), method: :post, remote: true, class: "far fa-heart" %>
           </p>
           <% end %>
         </div>
