--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -25,20 +25,8 @@
         <div class="col-3">
           <i class="far fa-comment"></i> <%= post.post_comments.count %>
         </div>
-        <div class="col-3">
-          <% if post.liked_by?(current_user) %>
-          <p>
-            <%= link_to post_likes_path(post), method: :delete do %>
-              ❤ <%= post.likes.count %>
-            <% end %>
-          </p>
-          <% else %>
-          <p>
-            <%= link_to post_likes_path(post), method: :post do %>
-              ♡ <%= post.likes.count %>
-            <% end %>
-          </p>
-          <% end %>
+        <div class="col-3 like-btn<%= post.id %>">
+          <%= render partial: 'likes/like-btn', locals: {post: post} %>
         </div>
         <div class="col-3"></div>
       </div>
