add Ajax comment

--- a/app/views/homes/investment.html.erb
+++ b/app/views/homes/investment.html.erb
@@ -1,1 +1,48 @@
-投資診断
+<div class="container">
+  <div class="row my-5 text-center">
+    <div class="col"><h6>安定した収入がある</h6></div>
+  </div>
+  <div class="row my-5 text-center">
+    <div class="col-2"></div>
+    <div class="col">YES</div>
+    <div class="col">NO</div>
+    <div class="col-2"></div>
+  </div>
+  <div class="row my-5 text-center">
+    <div class="col"><h6>忙しいので運用に時間をかけたくない</h6></div>
+    <div class="col"><h6>６ヶ月〜1年分の生活費の予備資金がある</h6></div>
+  </div>
+  <div class="row my-5 text-center">
+    <div class="col">YES</div>
+    <div class="col">NO</div>
+    <div class="col">YES</div>
+    <div class="col">NO</div>
+  </div>
+  <div class="row my-5 text-center">
+    <div class="col"><h6>値下がりしても落ち着いていられる</h6></div>
+    <div class="col"><h6>企業の業績を調べるのが好きだ</h6></div>
+    <div class="col"><h6>毎月、定期預金の積み立てをしている</h6></div>
+  </div>
+  <div class="row my-5 text-center">
+    <div class="col">YES</div>
+    <div class="col">NO</div>
+    <div class="col">YES</div>
+    <div class="col">NO</div>
+    <div class="col">YES</div>
+    <div class="col">NO</div>
+  </div>
+  <div class="row mt-5 text-center">
+    <div class="col"><h6>投資信託(国内外株式)</h6></div>
+    <div class="col"><h6>株式・REIT</h6></div>
+    <div class="col"><h6>投資信託(資産分散型)</h6></div>
+    <div class="col"><h6>個人向け国債積み立てNISA</h6></div>
+    <div class="col"><h6>投資の前に定期預金の積み立てから</h6></div>
+  </div>
+  <div class="row mb-5 text-center">
+    <div class="col"><%= link_to '特徴や情報', trust_path, class: 'btn btn-primary' %></div>
+    <div class="col"><%= link_to '特徴や情報', stock_path, class: 'btn btn-primary' %></div>
+    <div class="col"><%= link_to '特徴や情報', asset_path, class: 'btn btn-primary' %></div>
+    <div class="col"><%= link_to '特徴や情報', nisa_path, class: 'btn btn-primary' %></div>
+    <div class="col"><%= link_to '特徴や情報', deposit_path, class: 'btn btn-primary' %></div>
+  </div>
+</div>
