--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,15 +1,13 @@
 <div class="bg-light border-top py-3">
   <div class="container">
-    <div class="row">
-      <div class="col-sm-9 mb-2">
-        <span class="text-muted">Copyright © Nagano CAKE All Rights Reserved.</span>
+    <div class="row my-2 text-center">
+      <div class="col">
+        <%= link_to "", "https://twitter.com/sakatai_photo", class: "fab fa-twitter fa-4x" %>
       </div>
-      <div class="col-sm-3 mb-2 text-right">
-        <span class="text-muted">
-          <i class="fab fa-twitter-square mr-1"></i>
-          <i class="fab fa-instagram-square mr-1"></i>
-          <i class="fab fa-facebook-square"></i>
-        </span>
+    </div>
+    <div class="row text-center">
+      <div class="col mb-2">
+        <span class="text-muted">Copyright © Finance Bliss App All Rights Reserved.</span>
       </div>
     </div>
   </div>
