--- a/app/views/post_comments/_form.html.erb
+++ b/app/views/post_comments/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="col-3"></div>
-<%= form_with(model:[post, post_comment], remote: true) do |f| %>
+<%= form_with model:[post, post_comment] do |f| %>
 <div class="col-6">
   <%= f.text_area :comment, size: "30x5", placeholder: "コメントをここに" %>
   <%= f.submit "送信", class: 'btn btn-primary' %>
