--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,1 +1,67 @@
-About
+<div class="container">
+  <div class="row text-center">
+    <div class="col"><h1>Finance Bliss App.</h1></div>
+  </div>
+  <div class="row text-center">
+    <div class="col">
+      <p>金融リテラシーを上げて幸せな未来を</p>
+    </div>
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <%= image_tag 'sakatai.jpg', size: "300x400" %>
+    </div>
+    <div class="col">
+      <div class="row">
+        <div class="col">SAKATAI</div>
+        <div class="col">
+          <i class="fab fa-twitter-square mr-1"></i>
+          <i class="fab fa-instagram-square mr-1"></i>
+          <i class="fab fa-youtube"></i>
+        </div>
+      </div>
+      <div class="row">メッセージ</div>
+      <div class="row">
+      老後の資金不足問題解決のために正しくお金の知識を身につ け自分に合った資産設計を行うこと、
+      早いうちから将来のことを考え資産設計を行い準備していれば決して難しい 金額ではないことをアプリを通じて皆さんに伝えたいと考えています。
+      </div>
+    </div>
+  </div>
+</div>
+<!--お問い合わせフォーム-->
+<div class="container">
+  <div class="row text-center mt-5">
+    <div class="col">
+      <h1>Contact Form</h1>
+    </div>
+  </div>
+  <div class="row mt-2">
+    <div class="col-3"></div>
+    <div class="col">
+      <div class="form-group">
+        <label for="name">NAME:</label><br>
+        <input type="text" id="name" name="name" class="form-control">
+      </div>
+      <div class="form-group">
+        <label for="email">YOUR MALL:</label><br>
+        <input type="mail" id="email" name="email" class="form-control">
+      </div>
+      <div class="form-group">
+        <label for="message">MESSAGE:</label><br>
+        <textarea id="message" name="message" class="form-control"></textarea>
+      </div>
+      <input type="submit" value="SEND" class="btn btn-info">
+    </div>
+    <div class="col-3"></div>
+  </div>
+  <div class="row text-center mt-5">
+    <div class="col">
+      <p>
+        現在こちらのフォームはご利用いただけません。<br>
+        TwitterのDMにてご連絡お待ちしております。
+      </p>
+    </div>
+  </div>
+</div>
