--- a/app/views/post_comments/_index.html.erb
+++ b/app/views/post_comments/_index.html.erb
@@ -5,6 +5,6 @@
       <div class="row"><%= post_comment.user.name %></div>
       <div class="row"><%= post_comment.comment %></div>
     </div>
-    <div class="col-2"><%= link_to '', post_post_comment_path(post_comment.post, post_comment), class: 'fas fa-trash-alt fa-2x', method: :delete, "data-confirm" => "本当に消しますか？" %></div>
+    <div class="col-2"><%= link_to '', post_post_comment_path(post_comment.post, post_comment), class: 'fas fa-trash-alt fa-2x', method: :delete, remote: true %></div>
   </div>
 <% end %>
