--- a/app/views/relationships/_follow.html.erb
+++ b/app/views/relationships/_follow.html.erb
@@ -1,41 +1,5 @@
-<div class="contaoner">
-  <div class="row my-5">
-    <div class="col-3">
-      <%= link_to 'ホーム', posts_path, class: 'btn btn-primary' %><br>
-      <%= link_to 'プロフィール', user_path(current_user), class: 'btn btn-primary' %><br>
-      <%= link_to '投資先診断', investment_path, class: 'btn btn-primary' %><br>
-      <%= link_to '新規投稿', new_post_path, class: 'btn btn-primary' %>
-    </div>
-    <div class="col-6">
-        <div class="row">
-          <div class="col-2"><%= link_to '', user_path(user.id), class: 'fas fa-long-arrow-alt-left fa-3x' %></div>
-          <div class="col-2"><%= user.name %></div>
-        </div>
-        <div class="row my-4">
-          <div class="col-6 text-center">フォロワー</div>
-          <div class="col-6 text-center">フォロー中</div>
-        </div>
       <% if users.exists? %>
-      <% users.each do |user| %>
-      <div class="row">
-        <div class="col-2"><%= attachment_image_tag user, :profile_image, :fill, 50, 50, format: 'jpeg', class: "rounded-circle", fallback: "no_image.jpg", size: "50x50" %></div>
-        <div class="col-6">
-          <div class="row"><%= link_to user.name, user_path(user.id) %></div>
-          <div class="row"><%= user.introduction %></div>
-        </div>
-        <% if user.id == current_user.id %>
-        <% else %>
-        <div class="col-4">
-          <% if current_user.following?(user) %>
-            <%= link_to "フォロー中", user_relationships_path(user.id), class: "btn btn-info", method: :delete %>
-          <% else %>
-            <%= link_to "フォロー", user_relationships_path(user.id), class: "btn btn-success", method: :post %>
-          <% end %>
-        </div>
-        <% end %>
-      </div>
-      <hr>
-      <% end %>
+      <%= render 'users/index', users: users %>
       <% else %>
         <h2>ユーザーはまだいません</h2>
       <% end %>
