--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -1,10 +1,7 @@
 <div class="contaoner">
   <div class="row my-5">
     <div class="col-3">
-      <%= link_to 'ホーム', posts_path, class: 'btn btn-primary' %><br>
-      <%= link_to 'プロフィール', user_path(current_user), class: 'btn btn-primary' %><br>
-      <%= link_to '投資先診断', investment_path, class: 'btn btn-primary' %><br>
-      <%= link_to '新規投稿', new_post_path, class: 'btn btn-primary' %>
+      <%= render 'users/sidebar' %>
     </div>
     <div class="col-6">
     <% if @model == "user" %>
