add view deposit nisa

--- a/app/views/homes/answer.html.erb
+++ b/app/views/homes/answer.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col my-5 text-center">
-      <h1>◯◯万円</h1>
+      <%= @result %><span>万円</span>
     </div>
   </div>
   <div class="row text-center my-5">
