--- a/app/views/homes/deposit.html.erb
+++ b/app/views/homes/deposit.html.erb
@@ -1,12 +1,65 @@
 <div class="container">
   <div class="row my-5">
-    <div class="col">
-      <h1>投資の前に定期預金の積み立てから</h1>
+    <div class="col text-center">
+      <h1>投資の前に定期預金の積み立てからの方</h1>
     </div>
   </div>
-  <div class="row my-5">
+  <div class="row mt-3">
+    <div class="col text-center">
+      <%= image_tag 'top12.png', size: "700x350" %>
+    </div>
+  </div>
+  <div class="row my-3">
+    <div class="col text-center">
+      <h1>制限は少ないが金利が低い「定期積立預金」</h1>
+    </div>
+  </div>
+  <div class="row my-3">
+    <div class="col-2"></div>
+    <div class="col-8">
+      <p>
+        毎月決まった積立日に、毎月決まった積立額を普通預金から自動積立します。最低預入額は金融機関によって異なりますが、
+        条件に合えば自由に決めることができます。定期預金に対して制限が少ない点も特徴の一つです。その点金利が低いことを理解しておきましょう。<br>
+        途中で出金したり、ボーナスなど随時の資金を上積み預金するといった手続きができるケースもあります。「少しずつ安定的に資産運用がしたい」
+        といった方におすすめな方法です。
+      </p>
+    </div>
+    <div class="col-2"></div>
+  </div>
+  <div class="row my-3">
+    <div class="col text-center">
+      <h1>定期積立預金のメリットデメリット</h1>
+    </div>
+  </div>
+  <div class="row my-3">
+    <div class="col-1"></div>
+    <div class="col-10">
+      <table class="table table-bordered" style="table-layout:fixed;">
+        <tr>
+          <th class="table-success text-center" style="width:200px;">メリット</th>
+          <th class="table-success text-center" style="width:200px;">デメリット</th>
+        </tr>
+        <tr>
+          <th style="width:200px;">
+            <li>・毎月少額預金が可能</li>
+            <li>・元本保証がある</li>
+            <li>・経済状況に合わせて預入金額・期間を変更可能</li>
+            <li>・お金を引き出しやすい</li>
+          </th>
+          <th style="width:200px;">
+            <li>・定期預金と比べて金利が低い</li>
+          </th>
+        </tr>
+      </table>
+    </div>
+    <div class="col-1"></div>
+  </div>
+  <div class="row">
     <div class="col">
-      <p>情報</p>
+      <p>
+        【2021最新・金利比較】金利で選ぶネット銀行おすすめランキング！サイト
+        <%= link_to "こちら", "https://hoken-all.co.jp/media/netbank-kinri/" %>をクリック
+      </p>
     </div>
   </div>
 </div>
