--- a/app/views/homes/investment.html.erb
+++ b/app/views/homes/investment.html.erb
@@ -35,7 +35,7 @@
     <div class="col"><h6>投資信託(国内外株式)</h6></div>
     <div class="col"><h6>株式・REIT</h6></div>
     <div class="col"><h6>投資信託(資産分散型)</h6></div>
-    <div class="col"><h6>個人向け国債積み立てNISA</h6></div>
+    <div class="col"><h6>個人向け国債つみたてNISA</h6></div>
     <div class="col"><h6>投資の前に定期預金の積み立てから</h6></div>
   </div>
   <div class="row mb-5 text-center">
