add view nisa stock trust asset

--- a/app/views/homes/asset.html.erb
+++ b/app/views/homes/asset.html.erb
@@ -1,12 +1,138 @@
 <div class="container">
   <div class="row my-5">
+    <div class="col text-center">
+      <h1>投資信託について</h1>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col text-center">
+      <%= image_tag 'top22.png', size: "600x500" %>
+    </div>
     <div class="col">
-      <h1>投資信託(資産分散型)</h1>
+      <div class="row">
+        <div class="col mt-5">
+          <h3>値動きする資産に投資したい<br>初心者におすすめ</h3>
+        </div>
+      </div>
+      <div class="row my-3">
+        <div class="col">
+          <p>
+            投資信託とは、投資家から集めたお金を1つの大きな資金としてまとめ、運用の専門家が株式や債券などに投資・運用します。
+            そして、投資額に応じて利益が還元される金融商品です。投資信託なら1万円程度から始められます。投資信託は複数の株式
+            への投資など、分散投資タイプなので、たとえ少額でも自分の持ち分も分散の割合どうりに分散投資されます。
+            また、毎月一定額でつみたて購入しれば、さまざまな価格で買付され、さらにリスクを低減できます。
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row my-3">
+    <div class="col text-center">
+      <h1>投資信託の主な投資先</h1>
+    </div>
+  </div>
+  <div class="row my-3">
+    <div class="col-1"></div>
+    <div class="col-10">
+      <table class="table table-striped" style="table-layout:fixed;">
+        <tr>
+          <th class="table-success text-center" style="width:100px;"></th>
+          <th class="table-success text-center" style="width:200px;">投資先</th>
+          <th class="table-success text-center" style="width:200px;">過去の年平均リターン例</th>
+        </tr>
+        <tr>
+          <th class="table-success text-center" style="width:100px;">
+            <li>国内株式型</li>
+          </th>
+          <th class="text-center" style="width:200px;">
+            <li>国内の複数の株式に分散投資</li>
+          </th>
+          <th class="text-center" style="width:200px;">
+            <li>3.5%程度</li>
+          </th>
+        </tr>
+        <tr>
+          <th class="table-success text-center" style="width:100px;">
+            <li>外国株式型</li>
+          </th>
+          <th class="text-center" style="width:200px;">
+            <li>外国の複数の株式に分散投資</li>
+          </th>
+          <th class="text-center" style="width:200px;">
+            <li>5%程度</li>
+          </th>
+        </tr>
+        <tr>
+          <th class="table-success text-center" style="width:100px;">
+            <li>国内債券型</li>
+          </th>
+          <th class="text-center" style="width:200px;">
+            <li>国内の複数の債券に分散投資</li>
+          </th>
+          <th class="text-center" style="width:200px;">
+            <li>2%程度</li>
+          </th>
+        </tr><tr>
+          <th class="table-success text-center" style="width:100px;">
+            <li>外国債券型</li>
+          </th>
+          <th class="text-center" style="width:200px;">
+            <li>外国の複数の債券に分散投資</li>
+          </th>
+          <th class="text-center" style="width:200px;">
+            <li>4%程度</li>
+          </th>
+        </tr>
+        <tr>
+          <th class="table-success text-center" style="width:100px;">
+            <li>資産分散型<br>(バランス型)</li>
+          </th>
+          <th class="text-center" style="width:200px;">
+            <li>国内株式、外国株式、国内債券、<br>外国債券に分散投資</li>
+          </th>
+          <th class="text-center" style="width:200px;">
+            <li>4%程度</li>
+          </th>
+        </tr>
+      </table>
+    </div>
+    <div class="col-1"></div>
+  </div>
+  <div class="row mt-5">
+    <div class="col text-center">
+      <h1>投資信託のメリットデメリット</h1>
     </div>
   </div>
   <div class="row my-5">
+    <div class="col-1"></div>
+    <div class="col-10">
+      <table class="table table-bordered" style="table-layout:fixed;">
+        <tr>
+          <th class="table-success text-center" style="width:200px;">メリット</th>
+          <th class="table-success text-center" style="width:200px;">デメリット</th>
+        </tr>
+        <tr>
+          <th style="width:200px;">
+            <li>・少額からの分散投資でリスクを軽減できる</li>
+            <li>・プロが代わりに運用</li>
+            <li>・高い透明性を持った金融商品です</li>
+          </th>
+          <th style="width:200px;">
+            <li>・プロに任すので運用管理コスト(手数料)がかかる</li>
+            <li>・元本保証がない(投資に確実に増えるはありません)</li>
+            <li>・タイムリーに売買できない</li>
+          </th>
+        </tr>
+      </table>
+    </div>
+    <div class="col-1"></div>
+  </div>
+  <div class="row">
     <div class="col">
-      <p>情報</p>
+      <p>
+        【2021最新・徹底比較】投資信託がおすすめの証券会社ランキングサイト
+        <%= link_to "こちら", "https://hoken-all.co.jp/media/shintaku-osusume/" %>をクリック
+      </p>
     </div>
   </div>
-</div>
+</div>s
