--- a/app/views/homes/nisa.html.erb
+++ b/app/views/homes/nisa.html.erb
@@ -88,8 +88,31 @@
 <div class="container">
   <div class="row mt-4">
     <div class="col-12 text-center">
-      <h2>個人向け国債6の特徴</h2>
+      <h2>個人向け国債のメリットデメリット</h2>
     </div>
+  </div>
+  <div class="row my-3">
+    <div class="col-1"></div>
+    <div class="col-10">
+      <table class="table table-bordered" style="table-layout:fixed;">
+        <tr>
+          <th class="table-success text-center" style="width:200px;">メリット</th>
+          <th class="table-success text-center" style="width:200px;">デメリット</th>
+        </tr>
+        <tr>
+          <th style="width:200px;">
+            <li>・国が元本と利子の支払いを保証している</li>
+            <li>・1万円から購入できる</li>
+            <li>・年率0.05％の最低金利保証がある</li>
+          </th>
+          <th style="width:200px;">
+            <li>・発行から1年経過しないと中途換金できない</li>
+            <li>・中途換金すると中途解約調整額が差し引かれる</li>
+          </th>
+        </tr>
+      </table>
+    </div>
+    <div class="col-1"></div>
   </div>
   <div class="row my-5">
     <div class="col">
