--- a/app/views/homes/stock.html.erb
+++ b/app/views/homes/stock.html.erb
@@ -1,12 +1,130 @@
 <div class="container">
   <div class="row my-5">
-    <div class="col">
-      <h1>株式・REIT</h1>
+    <div class="col text-center">
+      <h1>株式について</h1>
     </div>
+  </div>
+  <div class="row">
+    <div class="col text-center">
+      <%= image_tag 'top6.png', size: "600x400" %>
+    </div>
+    <div class="col">
+      <div class="row">
+        <div class="col mt-5">
+          <h3>配当金や優待をもらえて<br>値上がりしたら売却益も</h3>
+        </div>
+      </div>
+      <div class="row my-3">
+        <div class="col">
+          <p>
+            株式投資とは、証券市場で株式を買って株主になり、経営に参加する権利や配当金を受け取る権利を得ること。
+            株式は値上がりした時点で売れば売却益が得られる他、株主自社製品を送るなどの株主優待を行う会社もあります。
+            売買は１００株などの単位で行い、1万円程度から100万円前後あります。株価の値動きは大きく、業績が低迷すれば
+            株価は下がり、倒産したらお金は戻りません。日本で株式市場に上場されているのは約3600社、長期的な成長が
+            見込める会社の株式を選ぶのがポイントです。
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row my-3">
+    <div class="col text-center">
+      <h1>株式のメリットデメリット</h1>
+    </div>
+  </div>
+  <div class="row my-3">
+    <div class="col-1"></div>
+    <div class="col-10">
+      <table class="table table-bordered" style="table-layout:fixed;">
+        <tr>
+          <th class="table-success text-center" style="width:200px;">メリット</th>
+          <th class="table-success text-center" style="width:200px;">デメリット</th>
+        </tr>
+        <tr>
+          <th style="width:200px;">
+            <li>・株式の売却益を期待できる</li>
+            <li>・配当金・株主優待がもらえる</li>
+            <li>・企業の経営（意思決定）に参加できる</li>
+          </th>
+          <th style="width:200px;">
+            <li>・株価変動リスクがある(売却損)</li>
+            <li>・流動性リスク(売りたいときに売れないこと)</li>
+            <li>・信用リスク(企業が経営不振のために破綻すること)</li>
+          </th>
+        </tr>
+      </table>
+    </div>
+    <div class="col-1"></div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <p>
+        初心者におすすめ証券会社ランキングサイト [2021年最新版]
+        <%= link_to "こちら", "https://projectf.org/%E4%BD%BF%E3%81%84%E3%82%84%E3%81%99%E3%81%95%E3%83%A9%E3%83%B3%E3%82%AD%E3%83%B3%E3%82%B0/
+        ?pr=002_002_responsive.src%3DGoogle-SS.target%3Dkwd-300974774064.area%3D1009239.camp%3D11663091750.group%3D112379369726.match%3Db.gclid
+        _Cj0KCQjwub-HBhCyARIsAPctr7zfTAOGPhcTYhknetoEUVd_vqOXZhwGGVxcO6YS5zSXlv8xJEdh-PQaArJUEALw_wcB&utm_source=GSS&utm_medium=cpc&utm_term=%E
+        6%A0%AA%20%E3%82%92%20%E5%A7%8B%E3%82%81%20%E3%81%9F%E3%81%84&utm_campaign=002&gclid=Cj0KCQjwub-HBhCyARIsAPctr7zfTAOGPhcTYhknetoEUVd_vq
+        OXZhwGGVxcO6YS5zSXlv8xJEdh-PQaArJUEALw_wcB" %>をクリック
+      </p>
+    </div>
+  </div>
+</div>
+<!--REIT(リート)-->
+<div class="container">
+  <div class="row mt-5">
+    <div class="col text-center">
+      <h1>REIT(リート)について</h1>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-1"></div>
+    <div class="col-5 mt-5">
+      <p>
+        複数の投資家から集めたお金でマンションやオフィスビル、商業施設などの不動産を購入し、賃貸収入や売却益などを投資家に還元する金融商品です。
+        価格は銘柄により10万〜70万円程度、株式のように売買ができます。このREITを複数組み入れた投資信託なら1万円程度から購入できます。
+        「Real Estate Investment Trust」の略称で、日本語に訳すと不動産投資信託という意味になります。
+      </p>
+    </div>
+    <div class="col-6 text-center">
+      <%= image_tag 'top21.png', size: "500x400" %>
+    </div>
+  </div>
+</div>
+<div class="container">
+  <div class="row mt-4">
+    <div class="col-12 text-center">
+      <h2>REIT(リート)のメリットデメリット</h2>
+    </div>
+  </div>
+  <div class="row my-3">
+    <div class="col-1"></div>
+    <div class="col-10">
+      <table class="table table-bordered" style="table-layout:fixed;">
+        <tr>
+          <th class="table-success text-center" style="width:200px;">メリット</th>
+          <th class="table-success text-center" style="width:200px;">デメリット</th>
+        </tr>
+        <tr>
+          <th style="width:200px;">
+            <li>・1万円程度の少額から投資できる</li>
+            <li>・分散投資が可能</li>
+            <li>・維持・管理を任せられる</li>
+          </th>
+          <th style="width:200px;">
+            <li>・災害リスクなどの影響がある</li>
+            <li>・株式同様に上場廃止リスクがある</li>
+          </th>
+        </tr>
+      </table>
+    </div>
+    <div class="col-1"></div>
   </div>
   <div class="row my-5">
     <div class="col">
-      <p>情報</p>
+      <p>
+        REIT（リート）の始め方は？初心者でも分かる投資手順や銘柄選びを解説 サイト
+        <%= link_to "こちら", "https://hedge.guide/feature/reit-beginner-investment-procedure.html" %>をクリック
+      </p>
     </div>
   </div>
 </div>
