--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,11 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
-    <%= render 'layouts/header' %>
+    <% if current_page?(about_path) %>
+      <%= render 'layouts/aboutheader' %>
+    <% else %>
+      <%= render 'layouts/header' %>
+    <% end %>
     <%= render 'layouts/flash' %>
     <%= yield %>
     <%= render 'layouts/footer' %>
